--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head><title>Premier labo</title></head>
+<head>
+<title><Demo GitOps/title>
+</head>
 <body>
-<h1>Mise en œuvre CI/CD </h1>
-<p>La page est en ligne !</p>
+<h1>Site Version 1</h1>
+<p>Déployé via GitOps</p>
 </body>
 </html>
